# room-rental-parser

./: .ai-factory.json  .env.example  .gitignore  README.md  pyproject.toml  requirements-bot.txt  requirements.txt
.ai-factory/: PLAN.md
.ai-factory/patches/: 2026-06-28-23.20.md  2026-07-09-06.41.md  2026-07-15-11.10.md  2026-07-15-11.45.md  2026-07-20-12.07.md
.ai-factory/plans/: feature-telegram-bot-tariffs.md  room-rental-parser-telegram.md
.github/workflows/: bot.yml  scrape.yml
data/: seen.db
deploy/: room-rental-parser.service  supabase_schema.sql
docs/: DEPLOY-ORACLE.md  bot-setup.md  deploy.md  supabase-setup.md
src/: cities.py  config.py  db.py  delivery.py  http_client.py  logging_setup.py  main.py  matching.py  models.py  storage.py  tariffs.py  telegram.py
src/bot/: router.py  texts.py
src/jobs/: __init__.py  scrape.py  updates.py
src/parsers/: base.py  example_site.py  kufar.py  kufar_rooms.py  onliner.py  onliner_rooms.py  realt.py  realt_rooms.py
src/payments/: __init__.py  base.py  bepaid.py  manual.py
tests/: fakes.py  test_apartment_parsers.py  test_cities.py  test_daemon.py  test_dedup.py  test_delivery.py  test_example_parser.py  test_kufar_parser.py  test_matching.py  test_menu_button.py  test_onliner_parser.py  test_realt_parser.py  test_router.py  test_storage.py  test_tariffs.py
tests/fixtures/: example_site_list.html  kufar_rooms.json  onliner_rooms.json  realt_rooms.html
